--- a/templates/result.html
+++ b/templates/result.html
@@ -9,12 +9,12 @@
     {% block body %} 
     <div class="res">
         <div class="res1">
-            <img src={{img_src}}>
+            <img src={{img_src}} style="width:300px;height:300px;">
             <br>
             <br><br><br>
         <h2>Name: {{act_name}}</h2>
         <h3>Scientific Name: <i>{{sci_name}}</i> </h3>
-        <h3>Accuracy of Prediction: {{acc}}</h3>
+        <h3>Accuracy of Prediction: {{acc}} %</h3>
         <br><br><br>
         </div>
         
